# hyprline

./: Cargo.toml  README.md  run.sh
hyprline-notifications/: Cargo.toml
hyprline-notifications/src/: dbus_service.rs  main.rs  notification.rs  repository.rs  styles.css
hyprline-notifications/src/ui/: history.rs  mod.rs  popup.rs
src/: config.rs  main.rs  shared_state.rs  styles.css
src/config/: bar_config.rs  mod.rs  widget_config.rs
src/domain/: battery_service.rs  brightness_service.rs  datetime_service.rs  keyboard_layout_service.rs  mod.rs  models.rs  network_service.rs  notification_service.rs  status_notifier_watcher_service.rs  submap_service.rs  system_resources_service.rs  system_tray_service.rs  volume_service.rs  workspace_service.rs
src/infrastructure/: dbus_notification_service.rs  dbus_status_notifier_watcher.rs  event_listener.rs  hyprland_ipc.rs  hyprland_keyboard_layout.rs  hyprland_submap.rs  keyboard_layout_listener.rs  lumen_brightness.rs  mod.rs  monitor_listener.rs  networkmanager.rs  notification_client.rs  notification_repository.rs  pipewire_volume.rs  remote_notification_service.rs  status_notifier_tray.rs  submap_listener.rs  system_battery.rs  system_datetime.rs  system_resources.rs
src/ui/: active_window.rs  bar.rs  battery.rs  brightness.rs  calendar.rs  datetime.rs  keyboard_layout.rs  menu.rs  mod.rs  network.rs  notification_popup.rs  notifications.rs  settings.rs  submap.rs  system_resources.rs  system_tray.rs  volume.rs  volume_osd.rs  workspaces.rs
