[package]
name = "hyprline"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = "0.9.7"
gtk4-layer-shell = "0.5.0"
gdk-pixbuf = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
zbus = "4.0"
async-channel = "2.1"
futures = "0.3"
tokio = { version = "1", features = ["rt", "sync", "macros"] }
